Mengubah index, offline dan manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,46 @@
 {
-  "background_color": "#008000",
-  "name": "Up Up",
-  "short_name": "UP",
-  "display": "standalone",
+  "name": "Lombok Tourism Guide App",
+  "short_name": "Oke Lombok",
   "icons": [
     {
-      "src": "YOU-NEED-TO-HAVE-A-144-x-144-ICON.png",
-      "sizes": "144x144",
-      "type": "image/png"
+     "src": "img/icon-36x36.png",
+     "sizes": "36x36",
+     "type": "image/png",
+     "density": "0.75"
+    },
+    {
+     "src": "img/icon-48x48.png",
+     "sizes": "48x48",
+     "type": "image/png",
+     "density": "1.0"
+    },
+    {
+     "src": "img/icon-72x72.png",
+     "sizes": "72x72",
+     "type": "image/png",
+     "density": "1.5"
+    },
+    {
+     "src": "img/icon-96x96.png",
+     "sizes": "96x96",
+     "type": "image/png",
+     "density": "2.0"
+    },
+    {
+     "src": "img/icon-144x144.png",
+     "sizes": "144x144",
+     "type": "image\/png",
+     "density": "3.0"
+    },
+    {
+     "src": "img/icon-192x192.png",
+     "sizes": "192x192",
+     "type": "image/png",
+     "density": "4.0"
     }
-  ]
+   ],
+  "start_url": "/index.html?homescreen=1",
+  "background_color": "#eeeeee",
+  "theme_color": "#6a1b9a",
+  "display": "standalone"
 }
