--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Lombok Tourism Guide App",
   "short_name": "Oke Lombok",
-  "start_url": "/",
+  "start_url": "index.html",
   "background_color": "#eeeeee",
   "theme_color": "#6a1b9a",
   "display": "standalone",
